java vanilla