@@ -35,5 +35,7 @@ architectury {
 
 tasks.withType(JavaCompile).configureEach {
     options.compilerArgs.add('--enable-preview')
+    options.compilerArgs += "--add-modules"
+    options.compilerArgs += "jdk.incubator.vector"
     options.release.set(21)
 }
